--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
         </div>
     </nav>
 </div>
+<div class="push">
+	<div class="push__container">
+		<button class="push__close"/>
+		<a class="push__link">Кислые Источники</a>
+	</div>
+</div>
 <section class="page-header" bg-image="images/carousel-slides/slide__osen1.jpg">
     <div class="page-header__container">
         <div class="page-header__parent">
